syntax = "proto3";

message ServiceResult {
    bool success = 1;
    optional string message = 2;
}


service OrderService {
    rpc TestingGrpc (google.protobuf.Empty) returns (ServiceResult)
}